# powertrace-hooks

./: .pre-commit-config.yaml  README.md  pyproject.toml  sitecustomize.py
.github/workflows/: build.yml
src/powertrace_hooks/cli/: entry_point.py
tests/: test_cli_entry_point.py  test_main.py
